const { Model } = require('sequelize')
const pg = require('pg');
pg.types.setTypeParser(1114, 'text', function(text) {return text})

// * Report Model
module.exports = (sequelize, DataTypes) => {
    const reports = sequelize.define('reports', {
        id : {
            type : DataTypes.STRING,
            primaryKey : true,
            allowNull : false,
            unique : true
        },
        class : DataTypes.STRING,
        avg_pre : DataTypes.FLOAT,
        acha_01 : DataTypes.STRING,
        acha_02 : DataTypes.STRING,
        acha_03 : DataTypes.STRING,
        acha_04 : DataTypes.STRING,
        fcha_01 : DataTypes.STRING,
        fcha_02 : DataTypes.STRING,
        fcha_03 : DataTypes.STRING,
        fcha_04 : DataTypes.STRING,
        scha_01 : DataTypes.STRING,
        scha_02 : DataTypes.STRING,
        mcha_01 : DataTypes.STRING,
        mcha_02 : DataTypes.STRING,
        mcha_03 : DataTypes.STRING,
        mcha_04 : DataTypes.STRING,
        mcha_11 : DataTypes.STRING,
        mcha_12 : DataTypes.STRING,
        mcha_13 : DataTypes.STRING,
        mcha_14 : DataTypes.STRING,
        dver_ww : DataTypes.STRING,
        dver_wp : DataTypes.STRING,
        dver_pw : DataTypes.STRING,
        dver_pp : DataTypes.STRING,
        dver : DataTypes.STRING,
        lsty_cp : DataTypes.STRING,
        lsty_rp : DataTypes.STRING,
        lsty_kp : DataTypes.STRING,
        lsty_ap : DataTypes.STRING,
        lsty_vp : DataTypes.STRING,
        pre_l1 : DataTypes.FLOAT,
        pre_l2 : DataTypes.FLOAT,
        pre_l3 : DataTypes.FLOAT,
        pre_l4 : DataTypes.FLOAT,
        pre_l5 : DataTypes.FLOAT,
        pre_r1 : DataTypes.FLOAT,
        pre_r2 : DataTypes.FLOAT,
        pre_r3 : DataTypes.FLOAT,
        pre_r4 : DataTypes.FLOAT,
        pre_r5 : DataTypes.FLOAT,
        post_l1 : DataTypes.FLOAT,
        post_l2 : DataTypes.FLOAT,
        post_l3 : DataTypes.FLOAT,
        post_l4 : DataTypes.FLOAT,
        post_l5 : DataTypes.FLOAT,
        post_r1 : DataTypes.FLOAT,
        post_r2 : DataTypes.FLOAT,
        post_r3 : DataTypes.FLOAT,
        post_r4 : DataTypes.FLOAT,
        post_r5 : DataTypes.FLOAT,
        a_l1 : DataTypes.FLOAT,
        a_l2 : DataTypes.FLOAT,
        a_l3 : DataTypes.FLOAT,
        a_l4 : DataTypes.FLOAT,
        a_l5 : DataTypes.FLOAT,
        a_r1 : DataTypes.FLOAT,
        a_r2 : DataTypes.FLOAT,
        a_r3 : DataTypes.FLOAT,
        a_r4 : DataTypes.FLOAT,
        a_r5 : DataTypes.FLOAT,
        pre_act_01 : DataTypes.INTEGER,
        pre_act_02 : DataTypes.INTEGER,
        pre_act_03 : DataTypes.INTEGER,
        pre_act_04 : DataTypes.INTEGER,
        pre_act_05 : DataTypes.INTEGER,
        pre_act_06 : DataTypes.INTEGER,
        pre_act_07 : DataTypes.INTEGER,
        pre_act_08 : DataTypes.INTEGER,
        pre_act_09 : DataTypes.INTEGER,
        pre_act_10 : DataTypes.INTEGER,
        pre_act_11 : DataTypes.INTEGER,
        pre_act_12 : DataTypes.INTEGER,
        pre_act_13 : DataTypes.INTEGER,
        pre_act_14 : DataTypes.INTEGER,
        pre_act_15 : DataTypes.INTEGER,
        post_act_01 : DataTypes.INTEGER,
        post_act_02 : DataTypes.INTEGER,
        post_act_03 : DataTypes.INTEGER,
        post_act_04 : DataTypes.INTEGER,
        post_act_05 : DataTypes.INTEGER,
        post_act_06 : DataTypes.INTEGER,
        post_act_07 : DataTypes.INTEGER,
        post_act_08 : DataTypes.INTEGER,
        post_act_09 : DataTypes.INTEGER,
        post_act_10 : DataTypes.INTEGER,
        post_act_11 : DataTypes.INTEGER,
        post_act_12 : DataTypes.INTEGER,
        post_act_13 : DataTypes.INTEGER,
        post_act_14 : DataTypes.INTEGER,
        post_act_15 : DataTypes.INTEGER,
        a_act_01 : DataTypes.INTEGER,
        a_act_02 : DataTypes.INTEGER,
        a_act_03 : DataTypes.INTEGER,
        a_act_04 : DataTypes.INTEGER,
        a_act_05 : DataTypes.INTEGER,
        a_act_06 : DataTypes.INTEGER,
        a_act_07 : DataTypes.INTEGER,
        a_act_08 : DataTypes.INTEGER,
        a_act_09 : DataTypes.INTEGER,
        a_act_10 : DataTypes.INTEGER,
        a_act_11 : DataTypes.INTEGER,
        a_act_12 : DataTypes.INTEGER,
        a_act_13 : DataTypes.INTEGER,
        a_act_14 : DataTypes.INTEGER,
        a_act_15 : DataTypes.INTEGER,
        latest_modified : DataTypes.DATE
    }, 
    {
        sequelize,
        modelName : 'reports',
        tableName : 'tb_report',
        timestamps : false
    })

    reports.associate = (models) => {
        reports.belongsTo(models.users, {foreignKey: 'id', as : 'users', onUpdate : 'cascade', targetKey: 'report_id'})
    }

    return reports
}